[gd_scene load_steps=6 format=2]

[ext_resource path="res://Icons/Editor/ToolSelect.svg" type="Texture" id=1]
[ext_resource path="res://Icons/Editor/ToolMove.svg" type="Texture" id=2]
[ext_resource path="res://Icons/Editor/ToolScale.svg" type="Texture" id=3]
[ext_resource path="res://Icons/Editor/ToolRotate.svg" type="Texture" id=4]
[ext_resource path="res://SceneComponents/RoomEditViewportToolbar.gd" type="Script" id=5]

[node name="RoomEditViewportToolbar" type="HBoxContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 758.0
margin_bottom = 29.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectToolButton" type="ToolButton" parent="."]
margin_right = 28.0
margin_bottom = 24.0
hint_tooltip = "Select Mode
Shift + LMB: Multi-Select"
icon = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 32.0
margin_right = 36.0
margin_bottom = 24.0

[node name="MoveToolButton" type="ToolButton" parent="."]
margin_left = 40.0
margin_right = 68.0
margin_bottom = 24.0
hint_tooltip = "Move Mode"
icon = ExtResource( 2 )

[node name="RotateToolButton" type="ToolButton" parent="."]
margin_left = 72.0
margin_right = 100.0
margin_bottom = 24.0
hint_tooltip = "Rotate Mode"
icon = ExtResource( 4 )

[node name="ScaleToolButton" type="ToolButton" parent="."]
margin_left = 104.0
margin_right = 132.0
margin_bottom = 24.0
hint_tooltip = "Scale Mode"
icon = ExtResource( 3 )

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 136.0
margin_right = 140.0
margin_bottom = 24.0

[node name="ViewMenuButton" type="MenuButton" parent="."]
margin_left = 144.0
margin_right = 186.0
margin_bottom = 24.0
text = "View"
